Adicionar recursos complementares

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Neutrals -->
+    <color name="neutral_900">#263238</color>
+    <color name="neutral_800">#37474F</color>
+    <color name="neutral_500">#607D8B</color>
+    <color name="neutral_200">#B0BEC5</color>
+    <color name="neutral_100">#CFD8DC</color>
+    <color name="neutral_50">#ECEFF1</color>
+    <color name="BG">#F6F8FA</color>
+
+
+
+
 </resources>
