--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/detail_menu">
+
+    <item
+        android:id="@+id/share_button"
+        android:icon="@drawable/ic_baseline_share_24"
+        android:title="SHARE"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/user_button"
+        android:icon="@drawable/person_outline_white_24dp"
+        android:title="UPDATE INFO"
+        app:showAsAction="ifRoom" />
 
 </menu>
