--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Widget.CheckInEventos.Button" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="backgroundTint">?attr/colorPrimary</item>
+    </style>
+
+    <style name="Widget.app.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@color/textfield_color_hint</item>
+        <item name="boxStrokeColor">@color/textfield_stroke_color</item>
+        <item name="android:textColor">@color/neutral_800</item>
+        <item name="endIconTint">@color/neutral_800</item>
+    </style>
 </resources>
