Extrair string e dimens para arquivo correspondente em res

--- a/app/src/main/res/layout/fragment_check_in_input.xml
+++ b/app/src/main/res/layout/fragment_check_in_input.xml
@@ -1,63 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.checkininput.CheckInInputFragment"
-    android:background="@color/BG"
-    android:padding="16dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/user_info_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="#de000000"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="Preencha as informações para o Check-in!" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.app.TextInputLayout"
-        android:id="@+id/user_name_til"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".ui.checkininput.CheckInInputFragment"
+        android:background="@color/BG"
+        android:padding="@dimen/normal_spacing">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/user_name_tiet"
+        <TextView
+            android:id="@+id/user_info_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/half_spacing"
+            android:textColor="#de000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="@string/checkin_fill_hint" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.app.TextInputLayout"
+            android:id="@+id/user_name_til"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nome" />
+            android:layout_marginTop="@dimen/normal_spacing">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/user_name_tiet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/user_name_hint" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.app.TextInputLayout"
-        android:id="@+id/user_email_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/user_email_tiet"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.app.TextInputLayout"
+            android:id="@+id/user_email_til"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email" />
+            android:layout_marginTop="@dimen/normal_spacing">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/save_user_info_button"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="Salvar dados"/>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/user_email_tiet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/user_email_hint" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/save_user_info_button"
+                android:layout_marginTop="@dimen/normal_spacing"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@string/button_save_text"/>
 
-
-
-</LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+</layout>
