--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.MainActivity"
         android:background="#CFD8DC"
-        android:padding="8dp">
+        android:padding="@dimen/half_spacing">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/event_list"
